
  [ Mario Limonciello ]
  * Add qt47_support.patch to fix FTBFS on Maverick.
  * Update checkout to r25842
  * Update to 0.23.1 based checkouts.
  * Reverse build depends for libjack to fix virtual packages problems.
  * Source debconf stuff in all scenarios for mythtv-common postinst.
  * Add configure_missing_check.patch to fix FTBFS on Maverick.

 -- Thomas Mashos <tgm4883@gmail.com>  Sat, 19 Jun 2010 23:52:56 -0700

mythtv (0.23.0+fixes25138-0ubuntu1) maverick; urgency=low

  [ Mario Limonciello ]
  * new upstream checkout (25138)

  [ Thomas Mashos ]
  * Added missingok for mirobridge log in logrotate (LP: #581283)
  * Backend now waits for udev to finish (LP: #556204)
  * Added patch to properly detect dbus during compile (LP: #574877)

 -- Thomas Mashos <tgm4883@gmail.com>  Sat, 19 Jun 2010 23:11:04 -0700

mythtv (0.23.0+fixes24158-0ubuntu2) lucid; urgency=low

  * debian/patches/proper_shutdown_behavior_for_ubuntu.patch: 
    - Drop support for a configurable shutdown or reboot command in the GUI
    - Only use DBUS for shutdown and halt

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 23 Apr 2010 10:56:00 -0500

mythtv (0.23.0+fixes24158-0ubuntu1) lucid; urgency=low
  
  * New upstream snapshot (r24158)
    - work around XMLtv bug causing obscenely poor response.
  * debian/control: Build-Depend on libmysqlclient16-dev, as previous 
    depends are being removed from the archive. (LP: #563053)

 -- Dave Walker (Daviey) <DaveWalker@ubuntu.com>  Fri, 16 Apr 2010 16:47:24 +0100

mythtv (0.23.0+fixes24133-0ubuntu1) lucid; urgency=low

  [ Dave Walker (Daviey) ]
  * New upstream snapshot (r24133)
    - Fixes crash of mythfrontend when upconverting audio to 5.1 (LP: #550562)
    - Improve Jamu handling of invalid database data (LP: #549352)
    - Remove mythtranscode's internal copy of the slow-delete code and instead 
      send a request to the backend to delete the file. (LP: #481104)