@@ -5,5 +5,6 @@
 40_libudev.patch
 proper_shutdown_behavior_for_ubuntu.patch
 
-qt47_support.patch
-configure_missing_check.patch
+#Only apply these on 10.10
+#qt47_support.patch
+#configure_missing_check.patch
