@@ -47,10 +47,19 @@ ifeq "$(DEB_BUILD_ARCH)" "powerpc"
 	CONFIGURE_OPTS += --enable-altivec --extra-cxxflags="-maltivec"
 endif
 
+
 %:
 	dh $@
 
-override_dh_auto_configure:
+special-patches:
+	#apply patches not intended for stable release
+	
+	if [ "$(shell lsb_release -rs)" = "10.10" ]; then \
+		patch -p1 < debian/patches/qt47_support.patch; \
+		patch -p1 < debian/patches/configure_missing_check.patch; \
+	fi
+
+override_dh_auto_configure: special-patches
 	#update SVN REVISION to show the right version
 	sed -i -e "s/^\(\(str  *\)\?SOURCE_VERSION\)=.*$$/\1=$(SVN_REVISION)/g;" version.sh
 
